# deluge-test-harness

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  branch_status.md  bug_reports.md  coverage_report.md  coverage_summary.csv
.github/workflows/: test.yml
build-utest/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-utest/Testing/Temporary/: CTestCostData.txt
docs/superpowers/plans/: 2026-03-19-quantize-freeze-test.md
scripts/: coverage.sh
src/harness/: string_serializer.h  test_fixture.cpp  test_fixture.h
src/mocks/: arpeggiator_stubs.cpp  audio_engine_mock.cpp  audio_engine_mock.h  auto_param_stubs.cpp  button_mock.cpp  button_mock.h  cfunctions_stubs.cpp  clip_instance_stubs.cpp  clip_mocks.h  d_string_wrapper.cpp  definitions.h  display_mock.cpp  display_mock.h  encoder_mock.cpp  encoder_mock.h  flash_storage_mock.cpp  function_mocks.h  functions_stubs.cpp  general_memory_allocator_mock.cpp  hash_table_wrapper.cpp  indicator_leds_mock.cpp  instrument_stubs.cpp  matrix_driver_mock.cpp  matrix_driver_mock.h  mem_functions.h  memory_mock.cpp  midi_engine_mock.cpp  midi_engine_mock.h  mod_controllable_audio_stubs.cpp  model_stack_stubs.cpp  note_row_stubs.cpp  pad_leds_mock.cpp  param_set_stubs.cpp  platform_stubs.cpp  print_mock.cpp  printf.h  song_mock.cpp  song_mock.h  sound_stubs.cpp  source_stubs.cpp  (+8 more)
src/mocks/memory/: fast_allocator.h  general_memory_allocator.h
src/mocks/model/: output.h
src/mocks/playback/: playback_handler.cpp  playback_handler.h
src/mocks/processing/: source.h
src/mocks/storage/: audio_file_stubs.cpp  flash_storage.h  storage_manager.h
src/mocks/util/: cfunctions.h  firmware_version.h  (+2 more)
tests/: run_all.cpp  smoke_test.cpp
tests/dsp/: absolute_value_test.cpp  delay_buffer_test.cpp  delay_deep_test.cpp  delay_smoke_test.cpp  delay_sync_test.cpp  delay_test.cpp  dx7_deep_test.cpp  dx7_env_test.cpp  dx7_note_test.cpp  dx7_pitchenv_test.cpp  dx7_synth_test.cpp  filter_blend_test.cpp  filter_resonance_extreme_test.cpp  filter_set_deep_test.cpp  filter_set_smoke_test.cpp  filter_set_test.cpp  freeverb_test.cpp  granular_deep_test.cpp  granular_destructor_test.cpp  granular_render_test.cpp  granular_smoke_test.cpp  granular_test.cpp  hpladder_test.cpp  lpladder_test.cpp  preset_values_stress_test.cpp  reverb_base_test.cpp  reverb_filter_roundtrip_test.cpp  rms_feedback_test.cpp  svf_test.cpp
tests/gui/: chord_keyboard_test.cpp  colour_test.cpp  l10n_test.cpp  notes_state_test.cpp  value_scaling_test.cpp
tests/hid/: encoder_quadrature_test.cpp  encoder_test.cpp  hid_test.cpp
tests/io/: learned_midi_test.cpp  midi_follow_logic_test.cpp
tests/meta/: missing_branch_guard_test.cpp  quantize_freeze_guard_test.cpp  sd_race_guard_test.cpp  song_cast_guard_test.cpp  upstream_bug_repro_test.cpp  upstream_overlap_test.cpp
tests/midi/: HAL9000.py  deluge_client.py  deluge_test_utils.py  test_dma_loopback.py  test_linear_record_duplicate_notes.py  test_midi_budget_behavior.py  test_midi_budget_burnin.py  test_midi_budget_survival.py  test_midi_file_stress.py  test_midi_stress.py  test_pedals_cc64_66_67.py  test_sysex_status.py
tests/model/: chord_test.cpp  clip_instance_deep_test.cpp  clip_instance_test.cpp  clip_iterators_test.cpp  consequence_clip_instance_test.cpp  consequence_clip_multiply_test.cpp  consequence_clip_test.cpp  consequence_note_test.cpp  consequence_perf_view_test.cpp  consequence_test.cpp  container_vectors_test.cpp  drum_deep_test.cpp  filter_config_test.cpp  iterance_deep_test.cpp  iterance_test.cpp  leaf_models_test.cpp  leaf_phase12_test.cpp  midi_message_test.cpp  mod_controllable_deep_test.cpp  mod_controllable_test.cpp  model_stack_test.cpp  modfx_processor_test.cpp  modfx_render_test.cpp  note_edge_case_test.cpp  note_vector_test.cpp  output_deep_test.cpp  pedal_state_test.cpp  preset_scales_test.cpp  resizeable_array_test.cpp  sample_controls_test.cpp  scale_chord_deep_test.cpp  scale_test.cpp  stutterer_test.cpp  sync_deep_test.cpp  sync_test.cpp  tempo_ratio_test.cpp  time_signature_test.cpp
tests/modulation/: arpeggiator_coverage_test.cpp  arpeggiator_deep_test.cpp  arpeggiator_edge_test.cpp  arpeggiator_test.cpp  auto_param_test.cpp  envelope_deep_test.cpp  envelope_test.cpp  filter_morph_label_test.cpp  lfo_test.cpp  midi_containers_test.cpp  param_collection_deep_test.cpp  param_collection_test.cpp  param_manager_deep_test.cpp  param_manager_test.cpp  param_node_vector_test.cpp  param_roundtrip_test.cpp  param_set_coverage_test.cpp  param_set_test.cpp  param_test.cpp  patch_cable_set_coverage_test.cpp  patch_cable_set_deep_test.cpp  patch_cable_set_test.cpp  patch_cable_test.cpp  patcher_test.cpp  sidechain_test.cpp
tests/playback/: metronome_countin_test.cpp  metronome_mode_test.cpp  midi_follow_dedup_test.cpp  midi_transport_toggle_test.cpp  playback_mode_test.cpp  session_logic_test.cpp
tests/processing/: multisample_transpose_test.cpp  note_debug_test.cpp  note_lifecycle_test.cpp  pool_debug_test.cpp  sound_deep_test.cpp  sound_method_test.cpp  sound_state_test.cpp  sound_voice_smoke_test.cpp  sustain_pedal_test.cpp  synth_mode_test.cpp  voice_lifecycle_test.cpp  wavetable_mod_knob_test.cpp
tests/storage/: dx7_algorithm_test.cpp  dx7_cartridge_test.cpp  learned_midi_serialization_test.cpp  model_serialization_deep_test.cpp  model_serialization_test.cpp  multi_range_test.cpp  patch_cable_serialization_test.cpp  serializer_format_test.cpp  source_packed_filenames_test.cpp  xml_roundtrip_test.cpp
tests/util/: browser_search_test.cpp  c_string_array_edge_test.cpp  c_string_array_test.cpp  clock_type_test.cpp  const_functions_test.cpp  container_stress_test.cpp  containers_test.cpp  d_string_test.cpp  d_stringbuf_test.cpp  firmware_version_test.cpp  hash_table_test.cpp  linked_list_deep_test.cpp  named_thing_vector_test.cpp  ordered_resizeable_array_test.cpp  phase_increment_fine_tuner_test.cpp  resizeable_array_test.cpp  resizeable_pointer_array_deep_test.cpp  semver_test.cpp  string_test.cpp  to_chars_test.cpp  waves_test.cpp
(+37 files in other folders)
